Fix chat card scrolling, add socket events, standardize card output

--- a/lang/en.json
+++ b/lang/en.json
@@ -27,8 +27,10 @@
   "PB.ArmorTierMedium": "Medium",
   "PB.ArmorTierNone": "None",
   "PB.Attack": "Attack",
-  "PB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
-  "PB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
+  "PB.AttackCrit": "Critical",
+  "PB.AttackCritText": "x2 damage, target armor reduced one tier.",
+  "PB.AttackFumble": "Fumble",
+  "PB.AttackFumbleText": "Weapon breaks or is lost.",
   "PB.Base": "Base",
   "PB.BaseClass": "Base Class",
   "PB.BaseClassRequired": "Base Class Required",
@@ -54,13 +56,15 @@
   "PB.CreatureArmor": "Armor",
   "PB.CreatureAttack": "Attack",
   "PB.CreatureSpecial": "Special",
-  "PB.Damage": "damage",
+  "PB.Damage": "Damage",
   "PB.DamageDie": "Damage Die",
   "PB.DamageReduction": "Damage Reduction",
   "PB.DamageReductionDie": "Damage Reduction Die",
   "PB.Defend": "Defend",
-  "PB.DefendCritText": "Crit: Gain free attack.",
-  "PB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
+  "PB.DefendCrit": "Critical",
+  "PB.DefendCritText": "Gain free attack.",
+  "PB.DefendFumble": "Fumble",
+  "PB.DefendFumbleText": "Take x2 damage, armor reduced one tier.",
   "PB.Description": "Description",
   "PB.Dice": "Dice",
   "PB.Dodge": "Dodge",
@@ -90,7 +94,7 @@
   "PB.Hat": "Hat",
   "PB.HatTable": "Hat Table",
   "PB.Heal": "Heal",
-  "PB.Hit": "HIT",
+  "PB.Hit": "Hit",
   "PB.HitPoints": "Hit Points",
   "PB.Hour": "hour",
   "PB.Hours": "hours",
@@ -109,8 +113,8 @@
   "PB.InvokableRitualSuccess": "Success",
 
   "PB.InvokableRelicCriticalSuccess": "Critical Success",
-  "PB.InvokableRelicFailure": "you are stunned for the next round and that RELIC cannot be used until the next dawn.",
-  "PB.InvokableRelicFumble": "the relic is permanently destroyed or depleted",
+  "PB.InvokableRelicFailure": "You are stunned for the next round and that RELIC cannot be used until the next dawn.",
+  "PB.InvokableRelicFumble": "The relic is permanently destroyed or depleted",
   "PB.InvokableRelicSuccess": "Success",
 
   "PB.InvokableCriticalSuccess": "Critical Success",
@@ -164,7 +168,7 @@
   "PB.ItemUseAmmoDamage": "Use Ammo Damage",
   "PB.ItemWeaponType": "Weapon Type",
   "PB.MaxQuantity": "Maximum Quantity",
-  "PB.Miss": "MISS",
+  "PB.Miss": "Miss",
   "PB.Modified": "Modified",
   "PB.Morale": "Morale",
   "PB.MoraleFlees": "Flees",
