How to use this system

--- a/lang/en.json
+++ b/lang/en.json
@@ -245,7 +245,7 @@
   "PB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
   "PB.SettingsWhiteOnPinkWhite": "White on pink (white)",
   "PB.SettingsTrackAmmo": "Track Ammo",
-  "PB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
+  "PB.SettingsTrackAmmoHint": "Select and auto-decrement ammo for ranged weapons.",
   "PB.SheetClassCharacter": "Default Pirate Borg Character Sheet",
   "PB.SheetClassContainer": "Default Pirate Borg Container Sheet",
   "PB.SheetClassCreature": "Default Pirate Borg Creature Sheet",
