Ships added, refactor all ChatMessage Card and some dialog

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,8 @@
   "PB.AbilityToughnessAbbrev": "TOU",
   "PB.AbilitySpirit": "Spirit",
   "PB.AbilitySpiritAbbrev": "SPI",
+  "PB.AbilitySkill": "Skill",
+  "PB.AbilitySkillAbbrev": "SKI",
   "PB.actionMacro": "Action Macro",
   "PB.actionMacroLabel": "Action Label",
   "PB.ActorBaseClassWarning": "Warning: this class doesn't require a base class",
@@ -67,11 +69,15 @@
   "PB.DefendFumbleText": "Take x2 damage, armor reduced one tier.",
   "PB.Description": "Description",
   "PB.Dice": "Dice",
+  "PB.DispositionFriendly": "Friendly",
+  "PB.DispositionNeutral": "Neutral",
+  "PB.DispositionHostile": "Hostile",
   "PB.Dodge": "Dodge",
   "PB.DR": "DR",
   "PB.EditAllowedScvmClassesMenu": "Allowed classes",
   "PB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
   "PB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
+  "PB.EditButton": "Edit",
   "PB.Encumbered": "Encumbered",
   "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
   "PB.EquipAWeaponToAttack": "Equip a weapon to attack.",
@@ -111,17 +117,14 @@
   "PB.InvokableRitualFailure": "Roll Mystical Mishaps and you can't use that ritual again until dawn.",
   "PB.InvokableRitualFailureButton": "Roll Mystical Mishaps",
   "PB.InvokableRitualSuccess": "Success",
-
   "PB.InvokableRelicCriticalSuccess": "Critical Success",
   "PB.InvokableRelicFailure": "You are stunned for the next round and that RELIC cannot be used until the next dawn.",
   "PB.InvokableRelicFumble": "The relic is permanently destroyed or depleted",
   "PB.InvokableRelicSuccess": "Success",
-
   "PB.InvokableCriticalSuccess": "Critical Success",
   "PB.InvokableFailure": "Failure",
   "PB.InvokableFumble": "Fumble",
   "PB.InvokableSuccess": "Success",
-
   "PB.InvokableTitle": "Cast {type}",
   "PB.Invoke": "Cast",
   "PB.InvokeRitual": "Cast Ritual",
@@ -167,6 +170,7 @@
   "PB.ItemUsesAmmo": "Uses Ammo",
   "PB.ItemUseAmmoDamage": "Use Ammo Damage",
   "PB.ItemWeaponType": "Weapon Type",
+  "PB.ItemValue": "Value",
   "PB.MaxQuantity": "Maximum Quantity",
   "PB.Miss": "Miss",
   "PB.Modified": "Modified",
@@ -174,7 +178,6 @@
   "PB.MoraleFlees": "Flees",
   "PB.MoraleSurrenders": "Surrenders",
   "PB.MysticalMishaps": "Mystical Mishaps",
-
   "PB.Name": "Name",
   "PB.NoActiveEncounter": "No Active Encounter",
   "PB.NoAmmoEquipped": "No Ammo equipped, this weapons required ammo.",
@@ -182,6 +185,14 @@
   "PB.NoPowerUsesRemaining": "No Arcane Ritual uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
   "PB.Ok": "Ok",
+
+  "PB.OutcomeFumble": "Fumble",
+  "PB.OutcomeSuccess": "Success",
+  "PB.OutcomeFailure": "Failure",
+  "PB.OutcomeCriticalSuccess": "Critical Success",
+  "PB.OutcomeHit": "Hit",
+  "PB.OutcomeMiss": "Miss",
+
   "PB.Luck": "Devil's Luck",
   "PB.LuckHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "PB.Outcome": "Outcome",
@@ -202,7 +213,6 @@
   "PB.ReactionIndifferent": "Indifferent",
   "PB.ReactionKill": "Kill!",
   "PB.RegenerateCharacter": "The Tavern",
-
   "PB.Rest": "Rest",
   "PB.RestDialogDontEat": "Don't eat - Restore no stats.",
   "PB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
@@ -212,7 +222,6 @@
   "PB.RestDialogLengthLong": "Long rest (overnight): recover d8 HP",
   "PB.RestDialogLengthShort": "Short rest (about 10 minutes): recover d4 HP.",
   "PB.RestDialogStarve": "No food or drink: restore 0 HP. After two days of starving: lose d4 HP per day",
-
   "PB.RitualRemaining": "Rituals",
   "PB.RitualPerday": "SPIRIT+d4 times per day",
   "PB.Roll": "Roll",
@@ -246,23 +255,67 @@
   "PB.SettingsWhiteOnPinkWhite": "White on pink (white)",
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
-  "PB.SheetClassCharacter": "Default Pirate Borg Character Sheet",
-  "PB.SheetClassContainer": "Default Pirate Borg Container Sheet",
-  "PB.SheetClassCreature": "Default Pirate Borg Creature Sheet",
+  "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
+  "PB.SheetClassContainer": "Pirate Borg Container Sheet",
+  "PB.SheetClassCreature": "Pirate Borg Creature Sheet",
+  "PB.SheetClassVehicle": "Pirate Borg Vehicule Sheet",
+  "PB.SheetClassVehicleEdit": "Pirate Borg Edit Vehicule Sheet",
   "PB.SheetItem": "Default Pirate Borg Item Sheet",
   "PB.Silver": "Silver",
   "PB.CharacterGeneratorMacro": "Character Generator Macro",
+  "PB.ShipShantyButton": "Sing",
+  "PB.ShipCrew": "Crew",
+  "PB.ShipPCAction": "PC Action",
+  "PB.ShipCrewAction": "Crew Action",
+  "PB.ShipHull": "Hull",
+  "PB.ShipDefend": "Defend",
+  "PB.ShipCrewActions": "Crew Actions",
+  "PB.ShipCrewActionBroadsides": "Broasides",
+  "PB.ShipCrewActionSmallArms": "Small Arms",
+  "PB.ShipCrewActionRam": "Ram",
+  "PB.ShipCrewActionFullSail": "Full Sail",
+  "PB.ShipCrewActionComeAbout": "Come About",
+  "PB.ShipCrewActionDropAnchor": "Drop Anchor",
+  "PB.ShipCrewActionWeighAnchor": "Weigh Anchor",
+  "PB.ShipCrewActionRepair": "Repair",
+  "PB.ShipCrewActionBoardingParty": "Boarding Party",
+  "PB.ShipCargo": "Cargo",
+  "PB.EmptyCrew": "Drag and drop Actors to add Crew",
+  "PB.EmptyCargo": "Cargo is Empty",
+  "PB.ShipMysticShanties": "Mystic Shanties",
+  "PB.ShipMysticShantiesEmpty": "No known Mystic Shanties",
+  "PB.ShipNoShantiesUsesRemaining": "No Mystic Shanties uses remaining",
+  "PB.ShipShantiesPerRest": "d4 + Captain's Spirit per Rest",
+  "PB.ShipFeatures": "Features",
+  "PB.ShipSpeed": "Speed",
+  "PB.ShipSinking": "Sinking",
+  "PB.ShipRotateLeft": "Rotate Left",
+  "PB.ShipRotateRight": "Rotate Right",
+  "PB.ShipDropAnchorMessage": "Reduce the ship's speed to zero.",
+  "PB.ShipWeighAnchorMessage": "The ship is no longer anchored.",
+  "PB.ShipComeAboutMessage": "Rotate one extra hex face.",
+  "PB.ShipBoardingPartyMessage": "If touching another ship, the crew may board and attack. Switch to close combat.",
+  "PB.ShipFullSailMessage": "Move one extra hex.",
+  "PB.ShipRepairMessage": "<p>Ship recovers d6 HP or repairs misfired cannons.</p><p><i>Can only be taken if ship has less than 50% hp.</i></p>",
+  "PB.ShipBroadsidesMessage": "<p>Attack with each of the ship's broadside attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p><p><i>Target must be in the ship’s arc of fire. </i></p>",
+  "PB.ShipSmallArmsMessage": "<p>Attack with each of the ship's small arms attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p>",
+  "PB.ShipRamMessage": "<p>A ship that ends its movement touching another ship can ram. All ships involved roll ram damage.</p><p> Add +1 for each hex they traveled on their last move. A ship that rams <strong>cannot</strong> take any other crew actions on its turn.</p>",
+  "PB.ShipRepairButton": "Recover HP",
+  "PB.ShipDealDamageButton": "Deal Damage",
+  "PB.ShipDealDamageCritical": "Double damage and hull is reduced one tier.",
+  "PB.ShipDealDamageFumble": "<p>Cannons or small arms <strong>misfire</strong>.</p><p>Must be repaired before they can fire again.</p>",
+  "PB.ShipSinkingMessage": "When a Derelict Takes More Damage",
+  "PB.ShipFailure": "Failure",
+  "PB.ShipSuccess": "Success",
   "PB.StandsFirm": "Stands firm",
   "PB.Starting": "Starting",
   "PB.StartingBonusDropInvalid": "Item must exist in a compendium pack",
   "PB.StartingBonusItems": "Starting Bonus Items",
   "PB.StartingBonusRolls": "Starting Bonus Rolls",
-
   "PB.StartingMacro": "Starting Macro",
   "PB.StartingItems": "Starting Items",
   "PB.StartingRolls": "Starting Rolls",
   "PB.Starvation": "Starvation",
-
   "PB.TabContents": "Contents",
   "PB.TabDescription": "Description",
   "PB.TabDetails": "Details",
@@ -271,12 +324,16 @@
   "PB.TabPowers": "Powers",
   "PB.TabEquipment": "Equipment",
   "PB.TabCombat": "Combat",
+  "PB.TabMysticShanties": "Mystic Shanties",
+  "PB.TabCargo": "Cargo",
   "PB.Take": "Take",
   "PB.TargetArmor": "Target Armor",
   "PB.Test": "Test",
+  "PB.TestShanties": "Sing",
   "PB.TheScvmfactory": "The Tavern",
   "PB.Tier": "Tier",
   "PB.Title": "MÖRK BORG",
+  "PB.ViewButton": "View",
   "PB.Type": "Type",
   "PB.Vs": "vs",
   "PB.WeaponTable": "Weapon Table",
