--- a/lang/en.json
+++ b/lang/en.json
@@ -17,8 +17,8 @@
   "PB.actionMacroLabel": "Action Label",
   "PB.ActorBaseClassWarning": "Warning: this class doesn't require a base class",
   "PB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
-  "PB.AllowedScvmClassesEdit": "Edit allowed classes",
-  "PB.AllowedScvmClassesSelect": "Select allowed classes",
+  "PB.AllowedCharacterGeneratorClassesEdit": "Edit allowed classes",
+  "PB.AllowedCharacterGeneratorClassesSelect": "Select allowed classes",
   "PB.AlternateName": "Alternate Name",
   "PB.Armor": "Armor",
   "PB.ArmorCurrentTier": "Current Tier",
@@ -74,9 +74,9 @@
   "PB.DispositionHostile": "Hostile",
   "PB.Dodge": "Dodge",
   "PB.DR": "DR",
-  "PB.EditAllowedScvmClassesMenu": "Allowed classes",
-  "PB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
-  "PB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
+  "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
+  "PB.EditAllowedCharacterGeneratorClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edit",
   "PB.EditButton": "Edit",
   "PB.Encumbered": "Encumbered",
   "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
@@ -236,12 +236,12 @@
   "PB.Round": "round",
   "PB.Rounds": "rounds",
   "PB.RuleText": "Rule Text",
-  "PB.ScvmfactoryChooseFromClasses": "Choose from Classes",
-  "PB.ScvmfactoryMakeScvm": "Make Pirate",
-  "PB.ScvmfactoryToggleAll": "Toggle All",
-  "PB.ScvmfactoryToggleNone": "Toggle None",
-  "PB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
-  "PB.ScvmfactoryWarningBaseClass": "* Require at least one class without a * selected.",
+  "PB.CharacterGeneratorChooseFromClasses": "Choose from Classes",
+  "PB.CharacterGeneratorMakeCharacter": "Make Pirate",
+  "PB.CharacterGeneratorToggleAll": "Toggle All",
+  "PB.CharacterGeneratorToggleNone": "Toggle None",
+  "PB.CharacterGeneratorWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
+  "PB.CharacterGeneratorWarningBaseClass": "* Require at least one class without a * selected.",
   "PB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
   "PB.SettingsBlackletter": "Blackletter",
@@ -335,7 +335,7 @@
   "PB.TargetArmor": "Target Armor",
   "PB.Test": "Test",
   "PB.TestShanties": "Sing",
-  "PB.TheScvmfactory": "The Tavern",
+  "PB.CharacterGenerator": "The Tavern",
   "PB.Tier": "Tier",
   "PB.Title": "MÖRK BORG",
   "PB.ViewButton": "View",
