--- a/lang/en.json
+++ b/lang/en.json
@@ -1,25 +1,22 @@
 {
-  "PB.Abilities": "Abilities",
   "PB.AbilityAgility": "Agility",
   "PB.AbilityAgilityAbbrev": "AGI",
-  "PB.AbilityScoreFormula": "Ability Score Formula",
   "PB.AbilityPresence": "Presence",
   "PB.AbilityPresenceAbbrev": "PRE",
+  "PB.AbilityScoreFormula": "Ability Score Formula",
+  "PB.AbilitySkill": "Skill",
+  "PB.AbilitySkillAbbrev": "SKI",
+  "PB.AbilitySpirit": "Spirit",
+  "PB.AbilitySpiritAbbrev": "SPI",
   "PB.AbilityStrength": "Strength",
   "PB.AbilityStrengthAbbrev": "STR",
   "PB.AbilityToughness": "Toughness",
   "PB.AbilityToughnessAbbrev": "TOU",
-  "PB.AbilitySpirit": "Spirit",
-  "PB.AbilitySpiritAbbrev": "SPI",
-  "PB.AbilitySkill": "Skill",
-  "PB.AbilitySkillAbbrev": "SKI",
-  "PB.actionMacro": "Action Macro",
-  "PB.actionMacroLabel": "Action Label",
+  "PB.ActionMacro": "Action Macro",
+  "PB.ActionMacroLabel": "Action Label",
   "PB.ActorBaseClassWarning": "Warning: this class doesn't require a base class",
-  "PB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
   "PB.AllowedCharacterGeneratorClassesEdit": "Edit allowed classes",
   "PB.AllowedCharacterGeneratorClassesSelect": "Select allowed classes",
-  "PB.AlternateName": "Alternate Name",
   "PB.Armor": "Armor",
   "PB.ArmorCurrentTier": "Current Tier",
   "PB.ArmorMaxTier": "Max Tier",
@@ -37,19 +34,19 @@
   "PB.BaseClass": "Base Class",
   "PB.BaseClassRequired": "Base Class Required",
   "PB.Broken": "Broken",
-  "PB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
-  "PB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
-  "PB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
-  "PB.BrokenHemorrhageLastHour": "DR18 the last hour",
-  "PB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
-  "PB.BrokenYouAreDead": "You are dead.",
   "PB.Cancel": "Cancel",
   "PB.CarryWeight": "Carry Weight",
   "PB.Carrying": "Carrying",
-  "PB.CarryingCapacity": "Carrying Capacity",
   "PB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
   "PB.CarryingRuleNoPenalty": "STR+8 max carried items.",
-  "PB.ClassAbilities": "Abilities",
+  "PB.CharacterGenerator": "The Tavern",
+  "PB.CharacterGeneratorChooseFromClasses": "Choose from Classes",
+  "PB.CharacterGeneratorMacro": "Character Generator Macro",
+  "PB.CharacterGeneratorMakeCharacter": "Make Pirate",
+  "PB.CharacterGeneratorToggleAll": "Toggle All",
+  "PB.CharacterGeneratorToggleNone": "Toggle None",
+  "PB.CharacterGeneratorWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
+  "PB.CharacterGeneratorWarningBaseClass": "* Require at least one class without a * selected.",
   "PB.ContainerEmptyHelpText": "Drag items into this container.",
   "PB.ContainerHolding": "Holding",
   "PB.ContainerSpace": "Container Space",
@@ -58,43 +55,38 @@
   "PB.CreatureArmor": "Armor",
   "PB.CreatureAttack": "Attack",
   "PB.CreatureSpecial": "Special",
+  "PB.DR": "DR",
   "PB.Damage": "Damage",
-  "PB.DamageDie": "Damage Die",
-  "PB.DamageReduction": "Damage Reduction",
-  "PB.DamageReductionDie": "Damage Reduction Die",
   "PB.Defend": "Defend",
   "PB.DefendCrit": "Critical",
   "PB.DefendCritText": "Gain free attack.",
   "PB.DefendFumble": "Fumble",
   "PB.DefendFumbleText": "Take x2 damage, armor reduced one tier.",
-  "PB.Description": "Description",
-  "PB.Dice": "Dice",
-  "PB.DispositionFriendly": "Friendly",
-  "PB.DispositionNeutral": "Neutral",
-  "PB.DispositionHostile": "Hostile",
   "PB.Dodge": "Dodge",
-  "PB.DR": "DR",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
-  "PB.EditAllowedCharacterGeneratorClassesMenuHint": "Edit the allowed classes in the character generator.",
   "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edit",
+  "PB.EditAllowedCharacterGeneratorClassesMenuHint": "Edit the allowed classes in the character generator.",
   "PB.EditButton": "Edit",
+  "PB.EmptyCargo": "Cargo is Empty",
+  "PB.EmptyCrew": "Drag and drop Actors to add Crew",
   "PB.Encumbered": "Encumbered",
-  "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
   "PB.EquipAWeaponToAttack": "Equip a weapon to attack.",
+  "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
   "PB.Equipment": "Equipment",
-  "PB.ExtraResourceUse": "Use Extra Resource",
-  "PB.ExtraResourceNameSingular": "Extra Resource Singular Name",
-  "PB.ExtraResourceNamePlural": "Extra Resource Plural Name",
   "PB.ExtraResourceFormula": "Extra Resource Formula",
   "PB.ExtraResourceFormulaLabel": "Extra Resource Formula Label",
+  "PB.ExtraResourceNamePlural": "Extra Resource Plural Name",
+  "PB.ExtraResourceNameSingular": "Extra Resource Singular Name",
   "PB.ExtraResourceTestFormula": "Extra Resource Test Formula",
   "PB.ExtraResourceTestFormulaLabel": "Extra Resource Test Formula Label",
+  "PB.ExtraResourceUse": "Use Extra Resource",
   "PB.FeatureType": "Feature Type",
   "PB.FlavorText": "Flavor Text",
   "PB.GetBetter": "Gain Experience",
   "PB.GettingBetterClassFeatures": "You gain the following",
   "PB.GettingBetterMacro": "Getting Better Macro",
   "PB.GettingBetterRolls": "Getting Better Rolls",
+  "PB.HP": "HP",
   "PB.HandedOne": "One-handed",
   "PB.HandedTwo": "Two-handed",
   "PB.Hat": "Hat",
@@ -102,48 +94,33 @@
   "PB.Heal": "Heal",
   "PB.Hit": "Hit",
   "PB.HitPoints": "Hit Points",
-  "PB.Hour": "hour",
-  "PB.Hours": "hours",
-  "PB.HP": "HP",
   "PB.IncomingAttack": "Incoming Attack",
   "PB.Individual": "Individual",
   "PB.Infection": "Infection",
+  "PB.Inflict": "Inflict",
   "PB.Initiative": "Initiative",
   "PB.InitiativeEnemiesBegin": "Enemies Begin",
   "PB.InitiativePlayerCharactersBegin": "Player Characters Begin",
-  "PB.Is": "is",
-  "PB.Inflict": "Inflict",
-  "PB.InvokableRitualCriticalSuccess": "Critical Success",
-  "PB.InvokableRitualFailure": "Roll Mystical Mishaps and you can't use that ritual again until dawn.",
-  "PB.InvokableRitualFailureButton": "Roll Mystical Mishaps",
-  "PB.InvokableRitualSuccess": "Success",
-  "PB.InvokableRelicCriticalSuccess": "Critical Success",
-  "PB.InvokableRelicFailure": "You are stunned for the next round and that RELIC cannot be used until the next dawn.",
-  "PB.InvokableRelicFumble": "The relic is permanently destroyed or depleted",
-  "PB.InvokableRelicSuccess": "Success",
   "PB.InvokableCriticalSuccess": "Critical Success",
   "PB.InvokableFailure": "Failure",
   "PB.InvokableFumble": "Fumble",
+  "PB.InvokableRelicFailure": "You are stunned for the next round and that RELIC cannot be used until the next dawn.",
+  "PB.InvokableRelicFumble": "The relic is permanently destroyed or depleted",
+  "PB.InvokableRitualFailure": "Roll Mystical Mishaps and you can't use that ritual again until dawn.",
+  "PB.InvokableRitualFailureButton": "Roll Mystical Mishaps",
   "PB.InvokableSuccess": "Success",
-  "PB.InvokableTitle": "Cast {type}",
   "PB.Invoke": "Cast",
-  "PB.InvokeRitual": "Cast Ritual",
   "PB.InvokeRelic": "Use Relic",
-  "PB.TestRelic": "Test Relic",
-  "PB.Items": "Items",
-  "PB.ItemAgilityDRModifier": "Agility DR Modifier",
+  "PB.InvokeRitual": "Cast Ritual",
   "PB.ItemCapacity": "Capacity",
   "PB.ItemCarried": "Carried",
   "PB.ItemCreate": "Create Item",
-  "PB.ItemCritOn": "Crit On",
   "PB.ItemCritExtraDamageFormula": "Crit Extra Damage Formula",
+  "PB.ItemCritOn": "Crit On",
   "PB.ItemDamageDie": "Damage Die",
-  "PB.ItemDamageReductionDie": "Damage Reduction Die",
-  "PB.ItemDefenseDRModifier": "Defense DR Modifier",
   "PB.ItemDelete": "Delete Item",
   "PB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
   "PB.ItemDropped": "Dropped",
-  "PB.ItemEdit": "Edit Item",
   "PB.ItemEquipped": "Equipped",
   "PB.ItemFumbleOn": "Fumble On",
   "PB.ItemHanded": "Handed",
@@ -163,16 +140,17 @@
   "PB.ItemTypeContainer": "Container",
   "PB.ItemTypeFeat": "Feat",
   "PB.ItemTypeHat": "Hat",
-  "PB.ItemTypeMisc": "Misc",
   "PB.ItemTypeInvokable": "Invokable",
-  "PB.ItemTypeInvokablePlural": "Invokables",
+  "PB.ItemTypeMisc": "Misc",
   "PB.ItemTypeWeapon": "Weapon",
   "PB.ItemTypeWeaponPlural": "Weapons",
   "PB.ItemUnequipped": "Unequipped",
-  "PB.ItemUsesAmmo": "Uses Ammo",
   "PB.ItemUseAmmoDamage": "Use Ammo Damage",
-  "PB.ItemWeaponType": "Weapon Type",
+  "PB.ItemUsesAmmo": "Uses Ammo",
   "PB.ItemValue": "Value",
+  "PB.ItemWeaponType": "Weapon Type",
+  "PB.Luck": "Devil's Luck",
+  "PB.LuckHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "PB.MaxQuantity": "Maximum Quantity",
   "PB.Miss": "Miss",
   "PB.Modified": "Modified",
@@ -182,41 +160,27 @@
   "PB.Movement": "Movement",
   "PB.MysticalMishaps": "Mystical Mishaps",
   "PB.Name": "Name",
-  "PB.NoActiveEncounter": "No Active Encounter",
   "PB.NoAmmoEquipped": "No Ammo equipped, this weapons required ammo.",
   "PB.NoEffect": "No effect",
   "PB.NoPowerUsesRemaining": "No Arcane Ritual uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
   "PB.Ok": "Ok",
+  "PB.Outcome": "Outcome",
+  "PB.OutcomeCriticalSuccess": "Critical Success",
+  "PB.OutcomeFailure": "Failure",
   "PB.OutcomeFumble": "Fumble",
   "PB.OutcomeSuccess": "Success",
-  "PB.OutcomeFailure": "Failure",
-  "PB.OutcomeCriticalSuccess": "Critical Success",
-  "PB.OutcomeHit": "Hit",
-  "PB.OutcomeMiss": "Miss",
-  "PB.Luck": "Devil's Luck",
-  "PB.LuckHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
-  "PB.Outcome": "Outcome",
   "PB.Party": "Party",
   "PB.PartyInitiative": "Party Initiative",
   "PB.PerDay": "per Day",
   "PB.PerRest": "per Rest",
   "PB.PirateBorg": "PIRATE BORG",
-  "PB.RollMacro": "Roll Macro",
   "PB.Powers": "Relics & Rituals",
-  "PB.PowersPerDayText": "SPIRIT+d4 times per day",
-  "PB.PowerUsesRemaining": "Uses Remaining",
   "PB.Quantity": "Quantity",
   "PB.Reaction": "Reaction",
-  "PB.ReactionAlmostFriendly": "Almost friendly",
-  "PB.ReactionAngered": "Angered",
-  "PB.ReactionHelpful": "Helpful",
-  "PB.ReactionIndifferent": "Indifferent",
-  "PB.ReactionKill": "Kill!",
+  "PB.RegenerateCharacter": "The Tavern",
   "PB.Reload": "Reload",
   "PB.Reloading": "Spent an action Reloading ({current}/{max})",
-  "PB.ReloadStatus": "Reload ({current}/{max})",
-  "PB.RegenerateCharacter": "The Tavern",
   "PB.Rest": "Rest",
   "PB.RestDialogDontEat": "Don't eat - Restore no stats.",
   "PB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
@@ -226,37 +190,13 @@
   "PB.RestDialogLengthLong": "Long rest (overnight): recover d8 HP",
   "PB.RestDialogLengthShort": "Short rest (about 10 minutes): recover d4 HP.",
   "PB.RestDialogStarve": "No food or drink: restore 0 HP. After two days of starving: lose d4 HP per day",
-  "PB.RitualRemaining": "Rituals",
   "PB.RitualPerday": "SPIRIT+d4 times per day",
+  "PB.RitualRemaining": "Rituals",
   "PB.Roll": "Roll",
-  "PB.Rolls": "Rolls",
-  "PB.RollFormula": "Roll Formula",
-  "PB.RollLabel": "Roll Label",
   "PB.RollPartyInitiative": "Roll Party Initiative",
-  "PB.Round": "round",
-  "PB.Rounds": "rounds",
   "PB.RuleText": "Rule Text",
-  "PB.CharacterGeneratorChooseFromClasses": "Choose from Classes",
-  "PB.CharacterGeneratorMakeCharacter": "Make Pirate",
-  "PB.CharacterGeneratorToggleAll": "Toggle All",
-  "PB.CharacterGeneratorToggleNone": "Toggle None",
-  "PB.CharacterGeneratorWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
-  "PB.CharacterGeneratorWarningBaseClass": "* Require at least one class without a * selected.",
   "PB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
-  "PB.SettingsBlackletter": "Blackletter",
-  "PB.SettingsBlackOnWhiteBlack": "Black on white (black)",
-  "PB.SettingsBlackOnYellowWhite": "Black on yellow (white)",
-  "PB.SettingsColorScheme": "Color Scheme",
-  "PB.SettingsColorSchemeHint": "Choose a color scheme for the UI.",
-  "PB.SettingsFontScheme": "Font Scheme",
-  "PB.SettingsFontSchemeHint": "Choose a font scheme for the UI.",
-  "PB.SettingsFoundryDefault": "Foundry Default",
-  "PB.SettingsLegible": "Legible",
-  "PB.SettingsWhiteOnBlackPink": "White on black (pink)",
-  "PB.SettingsWhiteOnBlackWhite": "White on black (white)",
-  "PB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
-  "PB.SettingsWhiteOnPinkWhite": "White on pink (white)",
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and auto-decrement ammo for ranged weapons.",
   "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
@@ -265,81 +205,71 @@
   "PB.SheetClassVehicle": "Pirate Borg Vehicule Sheet",
   "PB.SheetClassVehicleEdit": "Pirate Borg Edit Vehicule Sheet",
   "PB.SheetItem": "Default Pirate Borg Item Sheet",
-  "PB.Silver": "Silver",
-  "PB.CharacterGeneratorMacro": "Character Generator Macro",
-  "PB.ShipShantyButton": "Sing",
+  "PB.ShipBoardingPartyMessage": "If touching another ship, the crew may board and attack. Switch to close combat.",
+  "PB.ShipBroadsidesMessage": "<p>Attack with each of the ship's broadside attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p><p><i>Target must be in the ship’s arc of fire. </i></p>",
+  "PB.ShipCargo": "Cargo",
+  "PB.ShipComeAboutMessage": "Rotate one extra hex face.",
   "PB.ShipCrew": "Crew",
-  "PB.ShipPCAction": "PC Action",
-  "PB.ShipNPCAction": "NPC Action",
   "PB.ShipCrewAction": "Crew Action",
-  "PB.ShipHull": "Hull",
-  "PB.ShipDefend": "Defend",
-  "PB.ShipCrewActions": "Crew Actions",
+  "PB.ShipCrewActionBoardingParty": "Boarding Party",
   "PB.ShipCrewActionBroadsides": "Broasides",
-  "PB.ShipCrewActionSmallArms": "Small Arms",
-  "PB.ShipCrewActionRam": "Ram",
-  "PB.ShipCrewActionFullSail": "Full Sail",
   "PB.ShipCrewActionComeAbout": "Come About",
   "PB.ShipCrewActionDropAnchor": "Drop Anchor",
-  "PB.ShipCrewActionWeighAnchor": "Weigh Anchor",
+  "PB.ShipCrewActionFullSail": "Full Sail",
+  "PB.ShipCrewActionRam": "Ram",
   "PB.ShipCrewActionRepair": "Repair",
-  "PB.ShipCrewActionBoardingParty": "Boarding Party",
-  "PB.ShipCargo": "Cargo",
-  "PB.EmptyCrew": "Drag and drop Actors to add Crew",
-  "PB.EmptyCargo": "Cargo is Empty",
-  "PB.ShipMysticShanties": "Mystic Shanties",
-  "PB.ShipMysticShantiesEmpty": "No known Mystic Shanties",
-  "PB.ShipNoShantiesUsesRemaining": "No Mystic Shanties uses remaining",
-  "PB.ShipShantiesPerRest": "d4 + Captain's Spirit per Rest",
-  "PB.ShipFeatures": "Features",
-  "PB.ShipSpeed": "Speed",
-  "PB.ShipSinking": "Sinking",
-  "PB.ShipRotateLeft": "Rotate Left",
-  "PB.ShipRotateRight": "Rotate Right",
-  "PB.ShipDropAnchorMessage": "Reduce the ship's speed to zero.",
-  "PB.ShipWeighAnchorMessage": "The ship is no longer anchored.",
-  "PB.ShipComeAboutMessage": "Rotate one extra hex face.",
-  "PB.ShipBoardingPartyMessage": "If touching another ship, the crew may board and attack. Switch to close combat.",
-  "PB.ShipFullSailMessage": "Move one extra hex.",
-  "PB.ShipRepairMessage": "<p>Ship recovers d6 HP or repairs misfired cannons.</p><p><i>Can only be taken if ship has less than 50% hp.</i></p>",
-  "PB.ShipBroadsidesMessage": "<p>Attack with each of the ship's broadside attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p><p><i>Target must be in the ship’s arc of fire. </i></p>",
-  "PB.ShipSmallArmsMessage": "<p>Attack with each of the ship's small arms attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p>",
-  "PB.ShipRamMessage": "<p>A ship that ends its movement touching another ship can ram. All ships involved roll ram damage.</p><p> Add +1 for each hex they traveled on their last move. A ship that rams <strong>cannot</strong> take any other crew actions on its turn.</p>",
-  "PB.ShipRepairButton": "Recover HP",
+  "PB.ShipCrewActionSmallArms": "Small Arms",
+  "PB.ShipCrewActionWeighAnchor": "Weigh Anchor",
+  "PB.ShipCrewActions": "Crew Actions",
   "PB.ShipDealDamageButton": "Deal Damage",
   "PB.ShipDealDamageCritical": "Double damage and hull is reduced one tier.",
   "PB.ShipDealDamageFumble": "<p>Cannons or small arms <strong>misfire</strong>.</p><p>Must be repaired before they can fire again.</p>",
+  "PB.ShipDropAnchorMessage": "Reduce the ship's speed to zero.",
+  "PB.ShipFeatures": "Features",
+  "PB.ShipFullSailMessage": "Move one extra hex.",
+  "PB.ShipHull": "Hull",
+  "PB.ShipMysticShanties": "Mystic Shanties",
+  "PB.ShipMysticShantiesEmpty": "No known Mystic Shanties",
+  "PB.ShipNPCAction": "NPC Action",
+  "PB.ShipNoShantiesUsesRemaining": "No Mystic Shanties uses remaining",
+  "PB.ShipPCAction": "PC Action",
+  "PB.ShipRamMessage": "<p>A ship that ends its movement touching another ship can ram. All ships involved roll ram damage.</p><p> Add +1 for each hex they traveled on their last move. A ship that rams <strong>cannot</strong> take any other crew actions on its turn.</p>",
+  "PB.ShipRepairButton": "Recover HP",
+  "PB.ShipRepairMessage": "<p>Ship recovers d6 HP or repairs misfired cannons.</p><p><i>Can only be taken if ship has less than 50% hp.</i></p>",
+  "PB.ShipRotateLeft": "Rotate Left",
+  "PB.ShipRotateRight": "Rotate Right",
+  "PB.ShipShantiesPerRest": "d4 + Captain's Spirit per Rest",
+  "PB.ShipShantyButton": "Sing",
+  "PB.ShipSinking": "Sinking",
   "PB.ShipSinkingMessage": "When a Derelict Takes More Damage",
-  "PB.ShipFailure": "Failure",
-  "PB.ShipSuccess": "Success",
+  "PB.ShipSmallArmsMessage": "<p>Attack with each of the ship's small arms attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p>",
+  "PB.ShipSpeed": "Speed",
+  "PB.ShipWeighAnchorMessage": "The ship is no longer anchored.",
+  "PB.Silver": "Silver",
   "PB.StandsFirm": "Stands firm",
   "PB.Starting": "Starting",
   "PB.StartingBonusDropInvalid": "Item must exist in a compendium pack",
   "PB.StartingBonusItems": "Starting Bonus Items",
   "PB.StartingBonusRolls": "Starting Bonus Rolls",
-  "PB.StartingMacro": "Starting Macro",
   "PB.StartingItems": "Starting Items",
+  "PB.StartingMacro": "Starting Macro",
   "PB.StartingRolls": "Starting Rolls",
   "PB.Starvation": "Starvation",
+  "PB.TabCombat": "Combat",
   "PB.TabContents": "Contents",
   "PB.TabDescription": "Description",
   "PB.TabDetails": "Details",
+  "PB.TabEquipment": "Equipment",
   "PB.TabFeatures": "Features",
   "PB.TabHistory": "History",
-  "PB.TabPowers": "Powers",
-  "PB.TabEquipment": "Equipment",
-  "PB.TabCombat": "Combat",
-  "PB.TabMysticShanties": "Mystic Shanties",
-  "PB.TabCargo": "Cargo",
   "PB.Take": "Take",
   "PB.TargetArmor": "Target Armor",
   "PB.Test": "Test",
+  "PB.TestRelic": "Test Relic",
   "PB.TestShanties": "Sing",
-  "PB.CharacterGenerator": "The Tavern",
   "PB.Tier": "Tier",
-  "PB.Title": "MÖRK BORG",
-  "PB.ViewButton": "View",
   "PB.Type": "Type",
+  "PB.ViewButton": "View",
   "PB.Vs": "vs",
   "PB.WeaponTable": "Weapon Table",
   "PB.WeaponTypeMelee": "Melee",
