--- a/lang/en.json
+++ b/lang/en.json
@@ -255,6 +255,7 @@
   "PB.StartingMacro": "Starting Macro",
   "PB.StartingRolls": "Starting Rolls",
   "PB.Starvation": "Starvation",
+  "PB.Storage": "Storage",  
   "PB.TabCombat": "Combat",
   "PB.TabContents": "Contents",
   "PB.TabDescription": "Description",
