Add ammo output to attack card

--- a/lang/en.json
+++ b/lang/en.json
@@ -161,7 +161,8 @@
   "PB.Movement": "Movement",
   "PB.MysticalMishaps": "Mystical Mishaps",
   "PB.Name": "Name",
-  "PB.NoAmmoEquipped": "No Ammo equipped, this weapons required ammo.",
+  "PB.NoAmmo": "No ammo equipped",
+  "PB.NoAmmoEquipped": "No ammo equipped, this weapons required ammo.",
   "PB.NoEffect": "No effect",
   "PB.NoPowerUsesRemaining": "No Arcane Ritual uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
@@ -256,7 +257,7 @@
   "PB.StartingMacro": "Starting Macro",
   "PB.StartingRolls": "Starting Rolls",
   "PB.Starvation": "Starvation",
-  "PB.Storage": "Storage",  
+  "PB.Storage": "Storage",
   "PB.TabCombat": "Combat",
   "PB.TabContents": "Contents",
   "PB.TabDescription": "Description",
