Refactor attack and defense

--- a/lang/en.json
+++ b/lang/en.json
@@ -195,6 +195,7 @@
   "PB.RitualPerday": "SPIRIT+d4 times per day",
   "PB.RitualRemaining": "Rituals",
   "PB.Roll": "Roll",
+  "PB.RollDamageButton": "Roll Damage",
   "PB.RollPartyInitiative": "Roll Party Initiative",
   "PB.RuleText": "Rule Text",
   "PB.SelectAmmo": "Select ammo",
@@ -224,7 +225,6 @@
   "PB.ShipCrewActionSmallArms": "Small Arms",
   "PB.ShipCrewActionWeighAnchor": "Weigh Anchor",
   "PB.ShipCrewActions": "Crew Actions",
-  "PB.ShipDealDamageButton": "Deal Damage",
   "PB.ShipDealDamageCritical": "Double damage and hull is reduced one tier.",
   "PB.ShipDealDamageFumble": "<p>Cannons or small arms <strong>misfire</strong>.</p><p>Must be repaired before they can fire again.</p>",
   "PB.ShipDropAnchorMessage": "Reduce the ship's speed to zero.",
