--- a/lang/en.json
+++ b/lang/en.json
@@ -68,11 +68,12 @@
   "PB.EditAllowedCharacterGeneratorClassesMenuHint": "Edit the allowed classes in the character generator.",
   "PB.EditButton": "Edit",
   "PB.EmptyCargo": "Cargo is Empty",
-  "PB.EmptyCrew": "Drag and drop Actors to add Crew",
+  "PB.EmptyCrew": "Drag and drop character or creature to add crews",
   "PB.Encumbered": "Encumbered",
   "PB.EquipAWeaponToAttack": "Equip a weapon to attack.",
   "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
   "PB.Equipment": "Equipment",
+  "PB.EquipmentEmpty": "Drag items into the sheet to add items.",
   "PB.ExtraResourceFormula": "Extra Resource Formula",
   "PB.ExtraResourceFormulaLabel": "Extra Resource Formula Label",
   "PB.ExtraResourceNamePlural": "Extra Resource Plural Name",
@@ -112,11 +113,21 @@
   "PB.Invoke": "Cast",
   "PB.InvokeRelic": "Use Relic",
   "PB.InvokeRitual": "Cast Ritual",
+  "PB.ItemAbilitiesAgility": "Agility",
+  "PB.ItemAbilitiesSkill": "Skill",
+  "PB.ItemBroadsidesDie": "Broadsides Formula",
+  "PB.ItemBroadsidesQuantity": "Broadsides Quantity",
+  "PB.ItemBroadsidesWarning": "Broadsides Warning",
   "PB.ItemCapacity": "Capacity",
+  "PB.ItemCargo": "Max Cargo",
   "PB.ItemCarried": "Carried",
   "PB.ItemCreate": "Create Item",
+  "PB.ItemCrew": "Current Crew",
+  "PB.ItemCrewMax": "Max Crew",
+  "PB.ItemCrewMin": "Min Crew",
   "PB.ItemCritExtraDamageFormula": "Crit Extra Damage Formula",
   "PB.ItemCritOn": "Crit On",
+  "PB.ItemCurrentHp": "Current HP",
   "PB.ItemDamageDie": "Damage Die",
   "PB.ItemDelete": "Delete Item",
   "PB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
@@ -124,15 +135,24 @@
   "PB.ItemEquipped": "Equipped",
   "PB.ItemFumbleOn": "Fumble On",
   "PB.ItemHanded": "Handed",
+  "PB.ItemHullCurrentTier": "Hull Current Tier",
+  "PB.ItemHullMaxTier": "Hull Max Tier",
   "PB.ItemInvokableType": "Invokable Type",
   "PB.ItemIsEquipment": "Is Equipment?",
   "PB.ItemIsGunpowderWeapon": "Use gunpowder",
+  "PB.ItemMaxHp": "Max HP",
   "PB.ItemName": "Item Name",
   "PB.ItemNeedsReloading": "Needs Reloading",
   "PB.ItemPrice": "Price",
+  "PB.ItemRamDie": "Ram Formula",
   "PB.ItemReduceDamage": "Reduce Damage",
   "PB.ItemReloadTime": "Reload Time",
   "PB.ItemReloadTimeHelp": "The number of rounds this weapon takes to reload.",
+  "PB.ItemSmallArmsDie": "Small Arms Formula",
+  "PB.ItemSmallArmsQuantity": "Small Arms Quantity",
+  "PB.ItemSmallArmsWarning": "Small Arms Warning",
+  "PB.ItemSpecial": "Specials",
+  "PB.ItemSpeedMax": "Max Speed",
   "PB.ItemStartingGold": "Starting Gold",
   "PB.ItemTypeAmmo": "Ammo",
   "PB.ItemTypeArmor": "Armor",
@@ -206,8 +226,8 @@
   "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
   "PB.SheetClassContainer": "Pirate Borg Container Sheet",
   "PB.SheetClassCreature": "Pirate Borg Creature Sheet",
-  "PB.SheetClassVehicle": "Pirate Borg Vehicule Sheet",
-  "PB.SheetClassVehicleEdit": "Pirate Borg Edit Vehicule Sheet",
+  "PB.SheetClassVehicle": "Pirate Borg Vehicle Sheet",
+  "PB.SheetClassVehicleEdit": "Pirate Borg Edit Vehicle Sheet",
   "PB.SheetItem": "Default Pirate Borg Item Sheet",
   "PB.ShipBoardingPartyMessage": "If touching another ship, the crew may board and attack. Switch to close combat.",
   "PB.ShipBroadsidesMessage": "<p>Attack with each of the ship's broadside attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p><p><i>Target must be in the ship’s arc of fire. </i></p>",
