--- a/lang/en.json
+++ b/lang/en.json
@@ -53,7 +53,9 @@
   "PB.CreateNewItem": "Create New Item",
   "PB.Creature": "Creature",
   "PB.CreatureArmor": "Armor",
-  "PB.CreatureAttack": "Attack",
+  "PB.CreatureArmorDescription": "Armor Description",  
+  "PB.CreatureAttack": "Main Attack",
+  "PB.CreatureAttackDescription": "Attack Description",
   "PB.CreatureSpecial": "Special",
   "PB.DR": "DR",
   "PB.Damage": "Damage",
@@ -102,6 +104,7 @@
   "PB.Initiative": "Initiative",
   "PB.InitiativeEnemiesBegin": "Enemies Begin",
   "PB.InitiativePlayerCharactersBegin": "Player Characters Begin",
+  "PB.InvalidTarget": "You need to select a target",  
   "PB.InvokableCriticalSuccess": "Critical Success",
   "PB.InvokableFailure": "Failure",
   "PB.InvokableFumble": "Fumble",
@@ -219,8 +222,16 @@
   "PB.RollPartyInitiative": "Roll Party Initiative",
   "PB.RuleText": "Rule Text",
   "PB.SelectAmmo": "Select ammo",
-  "PB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
+  "PB.SettingsApplyOvercapacityPenalty": "Apply overcapacity penalty",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+  "PB.SettingsTargetSelection": "Target selection",
+  "PB.SettingsTargetSelectionHint": "Enabled target selection in attack, defense and crew action dialog",
+  "PB.SettingsAutomaticDamage": "Automatic damage",
+  "PB.SettingsAutomaticDamageHint": "Automatically apply damage on attack and defense roll",    
+  "PB.SettingsAttackAnimation": "Animations",
+  "PB.SettingsAttackAnimationHint": "Animations for attack and defense outcome",    
+  "PB.SettingsEnforceTarget": "Enforce target",
+  "PB.SettingsEnforceTargetHint": "Enforce target selection when combat actor is in combat",        
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and auto-decrement ammo for ranged weapons.",
   "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
@@ -287,6 +298,8 @@
   "PB.TabFeatures": "Features",
   "PB.TabHistory": "History",
   "PB.Take": "Take",
+  "PB.Target": "Target",
+  "PB.TargetInvalid": "Invalid target",
   "PB.TargetArmor": "Target Armor",
   "PB.Test": "Test",
   "PB.TestRelic": "Test Relic",
