--- a/lang/en.json
+++ b/lang/en.json
@@ -107,6 +107,7 @@
   "PB.Hat": "Hat",
   "PB.HatTable": "Hat Table",
   "PB.Heal": "Heal",
+  "PB.Help": "Help",
   "PB.Hit": "Hit",
   "PB.HitPoints": "Hit Points",
   "PB.IncomingAttack": "Incoming Attack",
@@ -205,6 +206,23 @@
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
   "PB.Ok": "Ok",
   "PB.Outcome": "Outcome",
+  "PB.OutcomeAnimationBroken": "Broken!",
+  "PB.OutcomeAnimationCriticalFailure": "Critical Failure!",
+  "PB.OutcomeAnimationCriticalHit": "Critical Hit!",
+  "PB.OutcomeAnimationCriticalSuccess": "Critical Success!",
+  "PB.OutcomeAnimationDamage": "-{amount} HP!",
+  "PB.OutcomeAnimationDead": "Dead!",
+  "PB.OutcomeAnimationDodge": "Dodge!",
+  "PB.OutcomeAnimationFailure": "Failure!",
+  "PB.OutcomeAnimationFumble": "Fumble!",
+  "PB.OutcomeAnimationHeal": "+{amount} HP!",
+  "PB.OutcomeAnimationHit": "Hit!",
+  "PB.OutcomeAnimationInfected": "Infected!",
+  "PB.OutcomeAnimationMiss": "Miss!",
+  "PB.OutcomeAnimationMysticalMishap": "Mystical Mishap",
+  "PB.OutcomeAnimationReloading": "Reloading!",
+  "PB.OutcomeAnimationStarving": "Starving!",
+  "PB.OutcomeAnimationSuccess": "Success!",
   "PB.OutcomeCriticalSuccess": "Critical Success",
   "PB.OutcomeFailure": "Failure",
   "PB.OutcomeFumble": "Fumble",
@@ -240,17 +258,17 @@
   "PB.RuleText": "Rule Text",
   "PB.SelectAmmo": "Select ammo",
   "PB.SettingsAdvancedAnimation": "Advanced animations",
-  "PB.SettingsAdvancedAnimationHint": "Enable animations for attacks, defense, ritual, relic, etc. Sequencer, JB2A Free or Patreon are required.",
+  "PB.SettingsAdvancedAnimationHint": "Enable animations for attacks, ship actions, defense, ritual, relic, etc. Sequencer, and JB2A Free or JB2A Patreon are required.",
   "PB.SettingsApplyOvercapacityPenalty": "Apply overcapacity penalty",
-  "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+  "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items.",
   "PB.SettingsAutomaticDamage": "Automatic damage and heal",
   "PB.SettingsAutomaticDamageHint": "Automatically apply damage and heal on corresponding rolls. Require a selected target.",
   "PB.SettingsEnforceTarget": "Enforce target selection",
-  "PB.SettingsEnforceTargetHint": "Enforce target selection when actor is in combat",
-  "PB.SettingsOutcomeAnimation": "Outcome Animations",
-  "PB.SettingsOutcomeAnimationHint": "Enable animations for roll outcomes (dodge, miss, hit, success, etc). Sequencer module required.",
-  "PB.SettingsTargetSelection": "Target selection",
-  "PB.SettingsTargetSelectionHint": "Enabled target selection in attack, defense and crew action dialog",
+  "PB.SettingsEnforceTargetHint": "Enforce target selection when actor is in combat.",
+  "PB.SettingsFloatingDamageAnimation": "Damages & heals animations",
+  "PB.SettingsFloatingDamageAnimationHint": "Display animations over tokens for damages and heals.",
+  "PB.SettingsFloatingOutcomeAnimation": "Outcome animations",
+  "PB.SettingsFloatingOutcomeAnimationHint": "Display animations over tokens for roll outcomes (dodge, miss, hit, success, etc).",
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and auto-decrement ammo for ranged weapons.",
   "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
