Changelog updated, minor fix

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,7 @@
   "PB.ActorBaseClassWarning": "Warning: this class doesn't require a base class",
   "PB.AllowedCharacterGeneratorClassesEdit": "Edit allowed classes",
   "PB.AllowedCharacterGeneratorClassesSelect": "Select allowed classes",
+  "PB.Animation": "Animation",
   "PB.Armor": "Armor",
   "PB.ArmorCurrentTier": "Current Tier",
   "PB.ArmorMaxTier": "Max Tier",
@@ -258,17 +259,17 @@
   "PB.RuleText": "Rule Text",
   "PB.SelectAmmo": "Select ammo",
   "PB.SettingsAdvancedAnimation": "Advanced animations",
-  "PB.SettingsAdvancedAnimationHint": "Enable animations for attacks, ship actions, defense, ritual, relic, etc. Sequencer, and JB2A Free or JB2A Patreon are required.",
+  "PB.SettingsAdvancedAnimationHint": "Enable animations for attacks, ship actions, defense, ritual, relic, etc. Sequencer, and JB2A Free or JB2A Patreon modules are required.",
   "PB.SettingsApplyOvercapacityPenalty": "Apply overcapacity penalty",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items.",
   "PB.SettingsAutomaticDamage": "Automatic damage and heal",
-  "PB.SettingsAutomaticDamageHint": "Automatically apply damage and heal on corresponding rolls. Require a selected target.",
+  "PB.SettingsAutomaticDamageHint": "Automatically apply damage and heal on corresponding rolls. A valid target is required.",
   "PB.SettingsEnforceTarget": "Enforce target selection",
-  "PB.SettingsEnforceTargetHint": "Enforce target selection when actor is in combat.",
+  "PB.SettingsEnforceTargetHint": "Enforce target selection when the actor is in combat.",
   "PB.SettingsFloatingDamageAnimation": "Damages & heals animations",
-  "PB.SettingsFloatingDamageAnimationHint": "Display animations over tokens for damages and heals.",
-  "PB.SettingsFloatingOutcomeAnimation": "Outcome animations",
-  "PB.SettingsFloatingOutcomeAnimationHint": "Display animations over tokens for roll outcomes (dodge, miss, hit, success, etc).",
+  "PB.SettingsFloatingDamageAnimationHint": "Display animations over tokens for damages and heals. Sequencer module required.",
+  "PB.SettingsFloatingOutcomeAnimation": "Roll outcome animations",
+  "PB.SettingsFloatingOutcomeAnimationHint": "Display animations over tokens for roll outcomes (dodge, miss, hit, success, etc). Sequencer module required.",
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and auto-decrement ammo for ranged weapons.",
   "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
