Final proof reading

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,17 +1,18 @@
 {
   "PB.AbilityAgility": "Agility",
-  "PB.AbilityAgilityAbbrev": "AGI",
+  "PB.AbilityAgilityDescription": "Defend, balance, swim, flee.",
+  "PB.AbilityAgilityShipDescription": "How nimble and maneuverable the vessel is.",
   "PB.AbilityPresence": "Presence",
-  "PB.AbilityPresenceAbbrev": "PRE",
+  "PB.AbilityPresenceDescription": "Smarts, ranged weapons, perceive, charm.",
   "PB.AbilityScoreFormula": "Ability Score Formula",
   "PB.AbilitySkill": "Skill",
-  "PB.AbilitySkillAbbrev": "SKI",
+  "PB.AbilitySkillShipDescription": "The crew's skill and training.",
   "PB.AbilitySpirit": "Spirit",
-  "PB.AbilitySpiritAbbrev": "SPI",
+  "PB.AbilitySpiritDescription": "Willpower, using relics, casting rituals.",
   "PB.AbilityStrength": "Strength",
-  "PB.AbilityStrengthAbbrev": "STR",
+  "PB.AbilityStrengthDescription": "Crush, lift, strike, grapple.",
   "PB.AbilityToughness": "Toughness",
-  "PB.AbilityToughnessAbbrev": "TOU",
+  "PB.AbilityToughnessDescription": "Drink grog, hold breath, survive falling.",
   "PB.ActionMacro": "Action Macro",
   "PB.ActionMacroLabel": "Action Label",
   "PB.ActorBaseClassWarning": "Warning: this class doesn't require a base class",
@@ -28,7 +29,7 @@
   "PB.ArmorTierNone": "None",
   "PB.Attack": "Attack",
   "PB.AttackCrit": "Critical",
-  "PB.AttackCritText": "x2 damage, target armor reduced one tier.",
+  "PB.AttackCritText": "Deal double damage, then armor/protection is reduced one tier",
   "PB.AttackFumble": "Fumble",
   "PB.AttackFumbleText": "Weapon breaks or is lost.",
   "PB.Base": "Base",
@@ -38,8 +39,8 @@
   "PB.Cancel": "Cancel",
   "PB.CarryWeight": "Carry Weight",
   "PB.Carrying": "Carrying",
-  "PB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
-  "PB.CarryingRuleNoPenalty": "STR+8 max carried items.",
+  "PB.CarryingRule": "8+Strength normal-sized items or DR+2 on AGI/STR tests.",
+  "PB.CarryingRuleNoPenalty": "8+Strength normal-sized items.",
   "PB.CharacterGenerator": "The Tavern",
   "PB.CharacterGeneratorChooseFromClasses": "Choose from Classes",
   "PB.CharacterGeneratorMacro": "Character Generator Macro",
@@ -62,9 +63,9 @@
   "PB.Damage": "Damage",
   "PB.Defend": "Defend",
   "PB.DefendCrit": "Critical",
-  "PB.DefendCritText": "Gain free attack.",
+  "PB.DefendCritText": "PC can make an immediate free attack.",
   "PB.DefendFumble": "Fumble",
-  "PB.DefendFumbleText": "Take x2 damage, armor reduced one tier.",
+  "PB.DefendFumbleText": "PC takes double damage, then their armor is reduced one tier.",
   "PB.Dodge": "Dodge",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
   "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edit",
@@ -89,17 +90,18 @@
   "PB.FlavorText": "Flavor Text",
   "PB.GetBetter": "Gain Experience",
   "PB.GetBetterAbilityFormula": "1d6 vs {ability} ({value})",
-  "PB.GetBetterConfirmMessage": "<p>The game master decides when a character should be improved.</p><p>It might be after: a raid, acquiring treasure, dividing the plunder, burying treasure, or acquiring a new ship</p>",
+  "PB.GetBetterConfirmMessage": "<p>The game master decides when a character should be improved.</p><p>It might be after: taking a prize, raiding a port, dividing the plunder, burying treasure, or exploring a temple.</p>",
   "PB.GetBetterFormula": "6d10 vs Max HP ({hp})",
   "PB.GetBetterGainAbility": "Gain 1 {ability}",
-  "PB.GetBetterHP": "Gain {hp} HP",
+  "PB.GetBetterHP": "Maximum HP increased by {hp}. <br /> You must rest or heal to increase your current HP",
   "PB.GetBetterLoot": "Among the dead men you find",
   "PB.GetBetterLootNothing": "nothing",
+  "PB.GetBetterLootWeapon": "a weapon ({link})",
   "PB.GetBetterLootRelic": "an ancient relic ({link})",
   "PB.GetBetterLootRitual": "an arcane ritual ({link})",
   "PB.GetBetterLootSilver": "{silver} silver(s)",
   "PB.GetBetterLoseAbility": "Lose 1 {ability}",
-  "PB.GettingBetterClassFeatures": "You gain the following",
+  "PB.GettingBetterClassFeatures": "Gain a class feature",
   "PB.GettingBetterMacro": "Getting Better Macro",
   "PB.GettingBetterRolls": "Getting Better Rolls",
   "PB.HP": "HP",
@@ -113,12 +115,12 @@
   "PB.HitPoints": "Hit Points",
   "PB.IncomingAttack": "Incoming Attack",
   "PB.Individual": "Individual",
-  "PB.Infection": "Infection",
+  "PB.Infection": "Infected/sick/bleeding/poisoned",
   "PB.Inflict": "Inflict",
   "PB.Initiative": "Initiative",
-  "PB.InitiativeEnemiesBegin": "Enemies Begin",
+  "PB.InitiativeEnemiesBegin": "Enemies go first",
   "PB.InitiativeFormula": "d6 + Agility",
-  "PB.InitiativePlayerCharactersBegin": "Players Begin",
+  "PB.InitiativePlayerCharactersBegin": "PCs go first",
   "PB.InvalidTarget": "You need to select a target",
   "PB.InvokableCriticalSuccess": "Critical Success",
   "PB.InvokableFailure": "Failure",
@@ -195,8 +197,8 @@
   "PB.Miss": "Miss",
   "PB.Modified": "Modified",
   "PB.Morale": "Morale",
-  "PB.MoraleFlees": "Flees",
-  "PB.MoraleSurrenders": "Surrenders",
+  "PB.MoraleFlees": "Demoralized - flees",
+  "PB.MoraleSurrenders": "Demoralized - Surrenders",
   "PB.Movement": "Movement",
   "PB.MysticalMishaps": "Mystical Mishaps",
   "PB.Name": "Name",
@@ -241,14 +243,14 @@
   "PB.Reloading": "Spent an action Reloading ({current}/{max})",
   "PB.ReloadingTitle": "Reloading {item}",
   "PB.Rest": "Rest",
-  "PB.RestDialogDontEat": "Don't eat - Restore no stats.",
-  "PB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
-  "PB.RestDialogFoodAndDrink": "Food and Drink",
-  "PB.RestDialogInfected": "Infected or sick: lose d6 HP every day.",
+  "PB.RestDialogDontEat": "No food or drink: restore 0 HP. After two days of starving: lose d4 HP per day.",
+  "PB.RestDialogEat": "Food and drink: restore HP.",
+  "PB.RestDialogFoodAndDrink": "Food and drink",
+  "PB.RestDialogInfected": "Lose d6 HP every morning (instead of recovering).",
   "PB.RestDialogLength": "Rest",
-  "PB.RestDialogLengthLong": "Long rest (overnight): recover d8 HP",
+  "PB.RestDialogLengthLong": "Long rest (overnight): recover d8 HP.",
   "PB.RestDialogLengthShort": "Short rest (about 10 minutes): recover d4 HP.",
-  "PB.RestDialogStarve": "No food or drink: restore 0 HP. After two days of starving: lose d4 HP per day",
+  "PB.RestDialogStarve": "Starving: Lose d4 HP.",
   "PB.RitualPerDayFormula": "d4 + Spirit",
   "PB.RitualPerday": "d4 + Spirit per day",
   "PB.RitualRemaining": "Rituals",
@@ -278,7 +280,7 @@
   "PB.SheetClassVehicle": "Pirate Borg Vehicle Sheet",
   "PB.SheetClassVehicleEdit": "Pirate Borg Edit Vehicle Sheet",
   "PB.SheetItem": "Default Pirate Borg Item Sheet",
-  "PB.ShipBoardingPartyMessage": "If touching another ship, the crew may board and attack. Switch to close combat.",
+  "PB.ShipBoardingPartyMessage": "If touching another ship, the crew may board and attack. Switch to melee combat.",
   "PB.ShipBroadsidesMessage": "<p>Attack with each of the ship's broadside attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p><p><i>Target must be in the ship’s arc of fire. </i></p>",
   "PB.ShipCargo": "Cargo",
   "PB.ShipComeAboutMessage": "Rotate one extra hex face.",
@@ -310,8 +312,8 @@
   "PB.ShipRepairMessage": "<p>Ship recovers d6 HP or repairs misfired cannons.</p><p><i>Can only be taken if ship has less than 50% hp.</i></p>",
   "PB.ShipRotateLeft": "Rotate Left",
   "PB.ShipRotateRight": "Rotate Right",
-  "PB.ShipShantiesPerDayFormula": "d4 + Captain's Spirit",
-  "PB.ShipShantiesPerRest": "d4 + Captain's Spirit per Rest",
+  "PB.ShipShantiesPerDayFormula": "1 + Captain's Spirit",
+  "PB.ShipShantiesPerRest": "1 + Captain's Spirit per Rest",
   "PB.ShipShantyButton": "Sing",
   "PB.ShipSinking": "Sinking",
   "PB.ShipSinkingMessage": "When a Derelict Takes More Damage",
@@ -351,6 +353,7 @@
   "PB.WeaponTable": "Weapon Table",
   "PB.WeaponTypeMelee": "Melee",
   "PB.WeaponTypeRanged": "Ranged",
+  "PB.WeaponTypeThrown": "Thrown",
   "PB.YouAreHit": "You are Hit",
   "PB.YouHaveNoFeatures": "You have no Features",
   "PB.YouHaveNoUsableItems": "You have no usable items",
