fix actor duplication, fix ritual & ressource per day, add support for blackpowder weapon

--- a/lang/en.json
+++ b/lang/en.json
@@ -113,6 +113,7 @@
   "PB.Help": "Help",
   "PB.Hit": "Hit",
   "PB.HitPoints": "Hit Points",
+  "PB.IgnoreArmor": "Defend against black powder weapon",
   "PB.IncomingAttack": "Incoming Attack",
   "PB.Individual": "Individual",
   "PB.Infection": "Infected/sick/bleeding/poisoned",
@@ -251,7 +252,7 @@
   "PB.RestDialogLengthLong": "Long rest (overnight): recover d8 HP.",
   "PB.RestDialogLengthShort": "Short rest (about 10 minutes): recover d4 HP.",
   "PB.RestDialogStarve": "Starving: Lose d4 HP.",
-  "PB.RitualPerDayFormula": "d4 + Spirit",
+  "PB.RitualPerDayFormula": "d4 + Spirit ({score})",
   "PB.RitualPerday": "d4 + Spirit per day",
   "PB.RitualRemaining": "Rituals",
   "PB.Rituals": "Ritual(s)",
@@ -320,6 +321,7 @@
   "PB.ShipSmallArmsMessage": "<p>Attack with each of the ship's small arms attacks</p><p><i>A PC make only add their bonus to one attack, but this action maybe be chosen by more than one PC if the ship has multiple attacks.</i> </p>",
   "PB.ShipSpeed": "Speed",
   "PB.ShipWeighAnchorMessage": "The ship is no longer anchored.",
+  "PB.ShouldIgnoreArmor": "Black powder weapons ignore armor",
   "PB.Silver": "Silver",
   "PB.StandsFirm": "Stands firm",
   "PB.Starting": "Starting",
